fixed layout issues, added more wow

--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -1,4 +1,24 @@
-/*Organize properties alphabetically*/.
+/*
+Organize properties alphabetically
+  ░░░░░░░░░▄░░░░░░░░░░░░░░▄░░░░
+  ░░░░░░░░▌▒█░░░░░░░░░░░▄▀▒▌░░░
+  ░░░░░░░░▌▒▒█░░░░░░░░▄▀▒▒▒▐░░░
+  ░░░░░░░▐▄▀▒▒▀▀▀▀▄▄▄▀▒▒▒▒▒▐░░░
+  ░░░░░▄▄▀▒░▒▒▒▒▒▒▒▒▒█▒▒▄█▒▐░░░
+  ░░░▄▀▒▒▒░░░▒▒▒░░░▒▒▒▀██▀▒▌░░░ 
+  ░░▐▒▒▒▄▄▒▒▒▒░░░▒▒▒▒▒▒▒▀▄▒▒▌░░
+  ░░▌░░▌█▀▒▒▒▒▒▄▀█▄▒▒▒▒▒▒▒█▒▐░░
+  ░▐░░░▒▒▒▒▒▒▒▒▌██▀▒▒░░░▒▒▒▀▄▌░
+  ░▌░▒▄██▄▒▒▒▒▒▒▒▒▒░░░░░░▒▒▒▒▌░
+  ▀▒▀▐▄█▄█▌▄░▀▒▒░░░░░░░░░░▒▒▒▐░
+  ▐▒▒▐▀▐▀▒░▄▄▒▄▒▒▒▒▒▒░▒░▒░▒▒▒▒▌
+  ▐▒▒▒▀▀▄▄▒▒▒▄▒▒▒▒▒▒▒▒░▒░▒░▒▒▐░
+  ░▌▒▒▒▒▒▒▀▀▀▒▒▒▒▒▒░▒░▒░▒░▒▒▒▌░
+  ░▐▒▒▒▒▒▒▒▒▒▒▒▒▒▒░▒░▒░▒▒▄▒▒▐░░
+  ░░▀▄▒▒▒▒▒▒▒▒▒▒▒░▒░▒░▒▄▒▒▒▒▌░░
+  ░░░░▀▄▒▒▒▒▒▒▒▒▒▒▄▄▄▀▒▒▒▒▄▀░░░
+  ░░░░░░▀▄▄▄▄▄▄▀▀▀▒▒▒▒▒▄▄▀░░░░░
+  ░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▀▀░░░░░░░░*/
 
 * {
   margin: 0px;
@@ -34,23 +54,27 @@ html, body {
 }
 
 #welcome-carousel {
-
+  height: 100%;
+  width: 100%;
 }
 
 .welcome-child {
   background-color: rgba(56, 192, 205, 0.82);
+  list-style-type: none;
   margin: 0 auto;
   padding: 15px;
   position: relative;
   top: 50%;
-  list-style-type: none;
-  display: inline-block;
 
   transform: translateY(-50%);
   -ms-tranform: translateY(-50%);
-  -webkit-transform: translafteY(-50%);
+  -webkit-transform: translateY(-50%);
 
   width: 350px;
+}
+
+#join {
+  display: none;
 }
 
 .welcome-child-tag-line {
